# learning_axum1

./: Cargo.toml  README.md
src/: error.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_ticket.rs
tests/: quick_dev.rs
