[package]
name = "learning_axum1"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio={version="1",features=["full"] }
serde={version="1",features=["derive"]}
serde_json="1"
axum="0.7"
tower-http ={version="0.5",features=["fs"]}
tower-cookies="0.10"

[dev-dependencies]
anyhow="1"
httpc-test="0.1.1"
